tests/paczka1/fuzzy1/89510835.err
Error in line 3: Du6mHrJztA A795 28,8
Error in line 2: jUCGC42t66H A587 89,6
Error in line 7: zFK8z1SfuJy A587 16,1
Error in line 30: m8gcQ6XC S785 61,9
Error in line 34: jUCGC42t66H A795 64,7
Error in line 32: ZDqNfmZrdR S785 11,8
